[tool.poetry]
name = "hypothesis-space"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hypothesis_space"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
